--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  hasura_connect: ^1.2.1+1
+  flutter_mobx: ^1.1.0
+  mobx: ^1.1.1
+  flutter_modular: ^1.1.2
+  intl:
 
 dev_dependencies:
+  mobx_codegen: ^1.0.3
+  build_runner: ^1.9.0
   flutter_test:
     sdk: flutter
 
